--- a/index.ipynb
+++ b/index.ipynb
@@ -1174,6 +1174,7 @@
     "plt.title('Most Common Words in Macbeth')\n",
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
+    "plt.ylim\n",
     "\n",
     "plt.show()"
    ]
