automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1174,7 +1174,7 @@
     "plt.title('Most Common Words in Macbeth')\n",
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
-    "plt.ylim()\n",
+    "plt.ylim(100,700)\n",
     "\n",
     "plt.show()"
    ]
