automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1126,7 +1126,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_25 = sorted(uniques_dict.values(), reverse = True)[0:25]\n",
+    "top_25_keys = sorted(uniques_dict, key=uniques_dict.get, reverse= True)[0:25]\n",
+    "\n",
+    "# Create Bar Graph\n",
+    "x = top_25_keys\n",
+    "y = top_25"
+   ]
   },
   {
    "cell_type": "code",
@@ -1164,12 +1171,7 @@
     }
    ],
    "source": [
-    "top_25 = sorted(uniques_dict.values(), reverse = True)[0:25]\n",
-    "top_25_keys = sorted(uniques_dict, key=uniques_dict.get, reverse= True)[0:25]\n",
     "\n",
-    "# Create Bar Graph\n",
-    "x = top_25_keys\n",
-    "y = top_25\n",
     "\n",
     "\n",
     "plt.bar(x, y, label = words)\n",
