automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1132,7 +1132,7 @@
     "\n",
     "# Create Bar Graph\n",
     "x = top_25_keys\n",
-    "y = top_25"
+    "y = top_25\n"
    ]
   },
   {
@@ -1171,7 +1171,6 @@
     }
    ],
    "source": [
-    "\n",
     "\n",
     "\n",
     "plt.bar(x, y, label = words)\n",
