--- a/index.ipynb
+++ b/index.ipynb
@@ -1132,7 +1132,60 @@
     "\n",
     "# Create Bar Graph\n",
     "x = top_25_keys\n",
-    "y = top_25\n"
+    "y = top_25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the',\n",
+       " 'and',\n",
+       " 'of',\n",
+       " 'to',\n",
+       " 'I',\n",
+       " 'a',\n",
+       " 'you',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'my',\n",
+       " 'And',\n",
+       " 'that',\n",
+       " 'not',\n",
+       " 'with',\n",
+       " 'Macb.',\n",
+       " 'be',\n",
+       " 'The',\n",
+       " 'it',\n",
+       " 'his',\n",
+       " 'your',\n",
+       " 'our',\n",
+       " 'haue',\n",
+       " 'this',\n",
+       " 'for',\n",
+       " 'That']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
    ]
   },
   {
