automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "    \n",
     "\n",
     "# Split the transcript into words\n",
-    "words = macbeth.split()\n",
+    "macbeth = macbeth.split()\n",
+    "\n",
     "# Create a dictionary\n",
     "words = words\n",
     "uniques = set(words)\n",
