automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,8 +110,7 @@
     "    \n",
     "\n",
     "# Split the transcript into words\n",
-    "\n",
-    "macbeth = macbeth.split()\n",
+    "words = macbeth.split()\n",
     "# Create a dictionary\n",
     "words = words\n",
     "uniques = set(words)\n",
