automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,7 @@
     "    \n",
     "\n",
     "# Split the transcript into words\n",
+    "macbeth = macbeth.l\n",
     "words = macbeth.split()\n",
     "# Create a dictionary\n",
     "uniques = set(words)\n",
