automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +127,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the',\n",
+       " 'and',\n",
+       " 'to',\n",
+       " 'of',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'that',\n",
+       " 'you',\n",
+       " 'in',\n",
+       " 'my',\n",
+       " 'is',\n",
+       " 'with',\n",
+       " 'not',\n",
+       " 'it',\n",
+       " 'be',\n",
+       " 'his',\n",
+       " 'this',\n",
+       " 'your',\n",
+       " 'macb.',\n",
+       " 'our',\n",
+       " 'for',\n",
+       " 'but',\n",
+       " 'haue',\n",
+       " 'he',\n",
+       " 'what']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
