automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,6 +261,7 @@
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
     "plt.ylim(100,760)\n",
+    "plt.xticks\n",
     "\n",
     "plt.show()"
    ]
