automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,95 +122,9 @@
     "\n",
     "# Create Bar Graph\n",
     "x = top_25_keys\n",
-    "y = top_25"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['the',\n",
-       " 'and',\n",
-       " 'to',\n",
-       " 'of',\n",
-       " 'i',\n",
-       " 'a',\n",
-       " 'that',\n",
-       " 'you',\n",
-       " 'in',\n",
-       " 'my',\n",
-       " 'is',\n",
-       " 'with',\n",
-       " 'not',\n",
-       " 'it',\n",
-       " 'be',\n",
-       " 'his',\n",
-       " 'this',\n",
-       " 'your',\n",
-       " 'macb.',\n",
-       " 'our',\n",
-       " 'for',\n",
-       " 'but',\n",
-       " 'haue',\n",
-       " 'he',\n",
-       " 'what']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[754,\n",
-       " 596,\n",
-       " 452,\n",
-       " 424,\n",
-       " 326,\n",
-       " 283,\n",
-       " 238,\n",
-       " 229,\n",
-       " 219,\n",
-       " 205,\n",
-       " 205,\n",
-       " 160,\n",
-       " 157,\n",
-       " 153,\n",
-       " 147,\n",
-       " 144,\n",
-       " 144,\n",
-       " 138,\n",
-       " 137,\n",
-       " 136,\n",
-       " 135,\n",
-       " 126,\n",
-       " 119,\n",
-       " 109,\n",
-       " 104]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
+    "y = top_25\n",
+    "\n",
+    "x1 = "
    ]
   },
   {
