automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.bar(x1, y1, label = words)\n",
+    "\n",
+    "\n",
+    "# Include descriptive titles and labels\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.title('Most Common Words in Macbeth')\n",
+    "plt.xlabel('unique words'.title())\n",
+    "plt.ylabel('count'.title())\n",
+    "plt.ylim(100,760)\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
