automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
     "# Include descriptive titles and labels\n",
     "\n",
     "plt.legend()\n",
-    "plt.title('Most Common Words in Macbeth')\n",
+    "plt.title('Most Common Words in Macbeth: 1-5')\n",
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
     "plt.ylim(100,760)\n",
