automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,6 +230,7 @@
     "\n",
     "plt.legend()\n",
     "plt.title('Most Common Words in Macbeth: 1-5')\n",
+    "plt.fig\n",
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
     "plt.ylim(100,760)\n",
