automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,17 +243,17 @@
     }
    ],
    "source": [
-    "plt.bar(x1, y1, label = words)\n",
+    "#plt.bar(x1, y1, label = words)\n",
     "\n",
     "\n",
     "# Include descriptive titles and labels\n",
     "\n",
-    "plt.legend()\n",
-    "plt.title('Most Common Words in Macbeth: 1-5')\n",
-    "plt.figure(figsize = (10,6))\n",
-    "plt.xlabel('unique words'.title())\n",
-    "plt.ylabel('count'.title())\n",
-    "plt.ylim(100,760)\n",
+    "#plt.legend()\n",
+    "#plt.title('Most Common Words in Macbeth: 1-5')\n",
+    "#plt.figure(figsize = (10,6))\n",
+    "#plt.xlabel('unique words'.title())\n",
+    "#plt.ylabel('count'.title())\n",
+    "#plt.ylim(100,760)\n",
     "\n",
     "plt.show()"
    ]
