automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,8 +182,8 @@
    ],
    "source": [
     "x1 = [a,b,c,d]\n",
-    "x2 = []\n",
-    "plt.bar(x, y, label = words)\n",
+    "x2 = [1,2,3,4]\n",
+    "plt.bar(x1, y2, label = words)\n",
     "\n",
     "\n",
     "# Include descriptive titles and labels\n",
@@ -192,7 +192,6 @@
     "plt.title('Most Common Words in Macbeth')\n",
     "plt.xlabel('unique words'.title())\n",
     "plt.ylabel('count'.title())\n",
-    "plt.ylim(100,760)\n",
     "\n",
     "plt.show()"
    ]
