automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,6 +181,8 @@
     }
    ],
    "source": [
+    "plt.figure\n",
+    "\n",
     "x1 = ['a','b','c','d']\n",
     "y1 = [1,2,3,4]\n",
     "plt.bar(x1, y1, label = words)\n",
