automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "plt.figure\n",
+    "plt.figure(figsize=(10,6)\n",
     "\n",
     "x1 = ['a','b','c','d']\n",
     "y1 = [1,2,3,4]\n",
