automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,6 +203,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size in inches\n",
+    "plt.figure(figsize=(10,6))\n",
+    "\n",
+    "plt.scatter(x, y, label = \"y = sin(x)\" )\n",
+    "\n",
+    "# Set x and y axes labels\n",
+    "plt.xlabel('X values')\n",
+    "plt.ylabel('Y values')\n",
+    "\n",
+    "plt.title('Scatter Plot in Matplotlib')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
