automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "x1 = ['a','b','c','d']\n",
     "y1 = [1,2,3,4]\n",
-    "plt.bar(x1, y1, label = words)\n",
+    "plt.(x1, y1, label = words)\n",
     "\n",
     "# Include descriptive titles and labels\n",
     "\n",
