--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     "# Set the figure size in inches\n",
     "plt.figure(figsize=(10,6))\n",
     "\n",
-    "plt.scatter(x, y, label = \"y = sin(x)\" )\n",
+    "plt.ba(x, y, label = \"y = sin(x)\" )\n",
     "\n",
     "# Set x and y axes labels\n",
     "plt.xlabel('X values')\n",
