automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "plt.figure(figsize=(10,6))\n",
     "\n",
-    "plt.bar(x1, y1, label = words)\n",
+    "plt.bar(x, y, label = words)\n",
     "\n",
     "# Include descriptive titles and labels\n",
     "\n",
