--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "plt.figure(figsize=(10,6))\n",
     "\n",
-    "plt.bar(x, y, label = words)\n",
+    "plt.bar(x, y, label = 'words')\n",
     "\n",
     "# Include descriptive titles and labels\n",
     "\n",
@@ -179,19 +179,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "\n",
-    "# Set the figure size in inches\n",
-    "plt.figure(figsize=(10,6))\n",
-    "\n",
-    "plt.bar(x, y, label = \"y = sin(x)\" )\n",
-    "\n",
-    "# Set x and y axes labels\n",
-    "plt.xlabel('X values')\n",
-    "plt.ylabel('Y values')\n",
-    "\n",
-    "plt.title('Scatter Plot in Matplotlib')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "\n"
    ]
   },
   {
